<resources>
    <string name="app_name">Basketball Teams</string>
    <string name="teams">TEAMS</string>
    <string name="basketball">BASKETBALL</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="image_content_description">Team Image</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="retry">Tentar novamente</string>
    <string name="error_occurred">Ocorreu um erro no processamento da requisição</string>
    <string name="city">City:</string>
    <string name="conference">Conference:</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="image_background_description">Image background</string>
    <string name="usuario_e_ou_senha_invalidos">Usuário e/ou senha inválidos</string>
    <string name="email_invalido">Email informado é inválido</string>
    <string name="informe_uma_senha">Informe uma senha</string>
    <string name="logo">Logo</string>
    <string name="author_name">Derlandy Belchior</string>
    <string name="author_country">Brazil</string>
    <string name="android_developer">Android Developer</string>
    <string name="android_challenge_ais_digital">Android Challenge - AIS Digital.</string>
    <string name="ais_address">Brasília - DF</string>
    <string name="company">Company</string>
    <string name="download_from_cloud">View on Github</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="basketball_teams_about">Basketball Teams About</string>
    <string name="social_address">\@basketballteams</string>
    <string name="version">Version</string>
    <string name="version_value">1.0</string>
    <string name="user_data_separator">,</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="team_name">Team Name:</string>
</resources>
