<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="About"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_10dp"
                    android:paddingTop="@dimen/spacing_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_10dp"
                        android:layout_marginTop="@dimen/spacing_10dp"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_15dp"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/logo" />

                        <View
                            android:layout_width="@dimen/spacing_15dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/basketball_teams_about"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/grey_80" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/social_address"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:contentDescription="@string/version"
                            android:layout_width="@dimen/spacing_40dp"
                            android:layout_height="@dimen/spacing_40dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_info_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_80"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version_value"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_10dp"
                    android:paddingTop="@dimen/spacing_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_10dp"
                        android:layout_marginLeft="@dimen/spacing_20dp"
                        android:layout_marginRight="@dimen/spacing_20dp"
                        android:layout_marginTop="@dimen/spacing_10dp"
                        android:text="@string/author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_90"
                        app:fontFamily="sans-serif-medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:contentDescription="@string/author_name"
                            android:layout_width="@dimen/spacing_40dp"
                            android:layout_height="@dimen/spacing_40dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_person_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/author_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_80"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/author_country"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/github_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:contentDescription="@string/download_from_cloud"
                            android:layout_width="@dimen/spacing_40dp"
                            android:layout_height="@dimen/spacing_40dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_cloud_download_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download_from_cloud"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_10dp"
                    android:paddingTop="@dimen/spacing_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_10dp"
                        android:layout_marginLeft="@dimen/spacing_20dp"
                        android:layout_marginRight="@dimen/spacing_20dp"
                        android:layout_marginTop="@dimen/spacing_10dp"
                        android:text="@string/company"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_90"
                        app:fontFamily="sans-serif-medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:contentDescription="@string/company"
                            android:layout_width="@dimen/spacing_40dp"
                            android:layout_height="@dimen/spacing_40dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_business_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/android_challenge_ais_digital"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_80"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/android_developer"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_5dp"
                        android:paddingRight="@dimen/spacing_5dp">

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:contentDescription="@string/ais_address"
                            android:layout_width="@dimen/spacing_40dp"
                            android:layout_height="@dimen/spacing_40dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_location_on_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_20dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ais_address"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_15dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

